--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "howlongwasstandup",
+  "name": "standup.washowlong.today",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html"
   },
   "author": "",
   "license": "ISC",
