--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "frappe-charts": "0.0.8"
   }
